terraform/src/app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: innovart-app-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/ingress.alb-id: "arn:aws:elasticloadbalancing:eu-west-1:504178855667:loadbalancer/app/app-lb/ca2ee6c554471169"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/listener-rules: |
      [
      {"Path": "/cart",
        "Priority": 10,
      },
      {"Path": "/catalog",
        "Priority": 20,
      },
      {"Path": "/checkout",
        "Priority": 30,
      },
      {"Path": "/orders",
        "Priority": 40,
      },
      {"Path": "/",
        "Priority": 50,
      }
      ]

spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /cart
            pathType: Prefix
            backend:
              service:
                name: carts
                port:
                  number: 80
          - path: /catalog
            pathType: Prefix
            backend:
              service:
                name: catalog
                port:
                  number: 80
          - path: /checkout
            pathType: Prefix
            backend:
              service:
                name: checkout
                port:
                  number: 80
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: orders
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 80
